monster overflow fix

--- a/mysite/static/style.css
+++ b/mysite/static/style.css
@@ -148,6 +148,18 @@ a:active { text-decoration: none; }
     
 }
 
+.monster_collection {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap:.5rem;
+}
+
+.monster_frame {
+    padding: .5rem;
+    border: 1px solid white;
+}
+
 
 /*__________________________BASE__________________________*/
 
